<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_expense"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Description"
        android:hint="@string/description"
        android:inputType="text"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Description"
        android:hint="@string/location"
        android:inputType="text"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etUSAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Amount"
        android:hint="@string/us_amount"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etAUSAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Amount"
        android:hint="@string/aus_amount"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Date"
        android:inputType="date"
        android:hint="@string/date"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/ivReceipt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/receipt_image" />

    <Button
        android:id="@+id/btnChangeReceipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_receipt_image" />

    <ImageView
        android:id="@+id/ivScreenshot"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bank_screenshot" />

    <Button
        android:id="@+id/btnChangeScreenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_bank_screenshot" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_expense" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:backgroundTint="@android:color/holo_red_light" />

</LinearLayout>
