<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/expense_tracker"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCreateExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_expense"
        android:padding="12dp"/>

    <Button
        android:id="@+id/btnViewExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_expenses"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
